--- a/ModernLookOSXSampleSwift/Controllers/AccountsView.xib
+++ b/ModernLookOSXSampleSwift/Controllers/AccountsView.xib
@@ -21,7 +21,7 @@
                     <constraints>
                         <constraint firstAttribute="width" constant="166" id="55o-Y3-fTx"/>
                     </constraints>
-                    <textFieldCell key="cell" scrollable="YES" lineBreakMode="clipping" selectable="YES" editable="YES" sendsActionOnEndEditing="YES" state="on" borderStyle="bezel" placeholderString="Select category" drawsBackground="YES" id="yF5-U5-d7i">
+                    <textFieldCell key="cell" scrollable="YES" lineBreakMode="clipping" selectable="YES" editable="YES" refusesFirstResponder="YES" sendsActionOnEndEditing="YES" state="on" borderStyle="bezel" placeholderString="Select category" drawsBackground="YES" id="yF5-U5-d7i">
                         <font key="font" metaFont="system"/>
                         <color key="textColor" name="controlTextColor" catalog="System" colorSpace="catalog"/>
                         <color key="backgroundColor" name="textBackgroundColor" catalog="System" colorSpace="catalog"/>
