--- a/Modern Look/MLCalendar/MLCalendarView.xib
+++ b/Modern Look/MLCalendar/MLCalendarView.xib
@@ -5,7 +5,7 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
-        <customObject id="-2" userLabel="File's Owner" customClass="MLCalendarView">
+        <customObject id="-2" userLabel="File's Owner" customClass="MLCalendarView" customModule="ModernLookOSXSampleSwift" customModuleProvider="target">
             <connections>
                 <outlet property="calendarTitle" destination="Wcm-C8-xfu" id="hzb-Y8-2Ph"/>
                 <outlet property="view" destination="Hz6-mo-xeY" id="0bl-1N-x8E"/>
@@ -20,7 +20,7 @@
                 <textField horizontalHuggingPriority="251" verticalHuggingPriority="750" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="Wcm-C8-xfu">
                     <rect key="frame" x="39" y="271" width="200" height="25"/>
                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
-                    <textFieldCell key="cell" scrollable="YES" lineBreakMode="clipping" sendsActionOnEndEditing="YES" alignment="center" title="February, 2015" id="AGw-Bh-AwI">
+                    <textFieldCell key="cell" scrollable="YES" lineBreakMode="clipping" sendsActionOnEndEditing="YES" alignment="center" title="February, 2019" id="AGw-Bh-AwI">
                         <font key="font" size="17" name="HelveticaNeue-Light"/>
                         <color key="textColor" name="labelColor" catalog="System" colorSpace="catalog"/>
                         <color key="backgroundColor" name="controlColor" catalog="System" colorSpace="catalog"/>
