--- a/ModernLookOSXSampleSwift/MainWindowController.xib
+++ b/ModernLookOSXSampleSwift/MainWindowController.xib
@@ -26,7 +26,7 @@
                     <customView translatesAutoresizingMaskIntoConstraints="NO" id="whW-lX-rz4" customClass="MLToolbar" customModule="ModernLookOSXSampleSwift" customModuleProvider="target">
                         <rect key="frame" x="0.0" y="360" width="798" height="65"/>
                         <subviews>
-                            <textField horizontalHuggingPriority="251" verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="2DT-er-t5Q">
+                            <textField horizontalHuggingPriority="251" verticalHuggingPriority="750" translatesAutoresizingMaskIntoConstraints="NO" id="2DT-er-t5Q" customClass="MLHyperlink" customModule="ModernLookOSXSampleSwift" customModuleProvider="target">
                                 <rect key="frame" x="32" y="20" width="170" height="29"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="29" id="FaU-Xm-F0m"/>
@@ -37,6 +37,9 @@
                                     <color key="textColor" name="labelColor" catalog="System" colorSpace="catalog"/>
                                     <color key="backgroundColor" name="controlColor" catalog="System" colorSpace="catalog"/>
                                 </textFieldCell>
+                                <connections>
+                                    <action selector="hyperlinkAction:" target="-2" id="rz5-3s-siZ"/>
+                                </connections>
                             </textField>
                             <customView translatesAutoresizingMaskIntoConstraints="NO" id="NR3-Kg-hW0">
                                 <rect key="frame" x="334" y="16" width="130" height="34"/>
@@ -115,6 +118,9 @@
                                     <behavior key="behavior" pushIn="YES" lightByBackground="YES" lightByGray="YES"/>
                                     <font key="font" metaFont="system"/>
                                 </buttonCell>
+                                <connections>
+                                    <action selector="showAlert:" target="-2" id="KKh-If-CoI"/>
+                                </connections>
                             </button>
                         </subviews>
                         <constraints>
