--- a/ModernLookOSXSampleSwift/Controllers/ToolBar.xib
+++ b/ModernLookOSXSampleSwift/Controllers/ToolBar.xib
@@ -14,13 +14,14 @@
         <customObject id="-1" userLabel="First Responder" customClass="FirstResponder"/>
         <customObject id="-3" userLabel="Application" customClass="NSObject"/>
         <customView id="c22-O7-iKe" customClass="MLToolbar" customModule="ModernLookOSXSampleSwift" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="743" height="72"/>
+            <rect key="frame" x="0.0" y="0.0" width="845" height="72"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
             <subviews>
                 <gridView xPlacement="leading" yPlacement="bottom" rowAlignment="none" translatesAutoresizingMaskIntoConstraints="NO" id="dZz-3v-kmg">
-                    <rect key="frame" x="0.0" y="0.0" width="743" height="72"/>
+                    <rect key="frame" x="0.0" y="0.0" width="845" height="72"/>
                     <constraints>
-                        <constraint firstItem="F0z-Fg-PCb" firstAttribute="leading" secondItem="UIM-RW-r5x" secondAttribute="trailing" constant="6" id="yme-Qs-OWJ"/>
+                        <constraint firstItem="ceN-6a-tub" firstAttribute="top" secondItem="jCk-N5-vW5" secondAttribute="top" id="JtT-fX-TC0"/>
+                        <constraint firstItem="ceN-6a-tub" firstAttribute="leading" secondItem="UIM-RW-r5x" secondAttribute="trailing" constant="12" id="PPU-XL-IUL"/>
                     </constraints>
                     <rows>
                         <gridRow height="10" id="8E7-li-jLr"/>
@@ -35,6 +36,7 @@
                         <gridColumn width="20" id="OTS-Jl-7hi"/>
                         <gridColumn width="150" id="xOe-xH-81b"/>
                         <gridColumn id="DZP-Oh-WPY"/>
+                        <gridColumn id="Be1-SN-h5C"/>
                         <gridColumn id="FSc-K7-Yxq"/>
                     </columns>
                     <gridCells>
@@ -54,6 +56,7 @@
                         <gridCell row="8E7-li-jLr" column="OTS-Jl-7hi" id="FD6-RS-Hvz"/>
                         <gridCell row="8E7-li-jLr" column="xOe-xH-81b" id="lsk-tL-bns"/>
                         <gridCell row="8E7-li-jLr" column="DZP-Oh-WPY" id="CFK-ZE-7QE"/>
+                        <gridCell row="8E7-li-jLr" column="Be1-SN-h5C" id="hkn-Np-YlL"/>
                         <gridCell row="8E7-li-jLr" column="FSc-K7-Yxq" id="bRA-ho-chl"/>
                         <gridCell row="k9r-E5-2wk" column="Kfg-pT-2LX" id="lpL-XQ-MWO"/>
                         <gridCell row="k9r-E5-2wk" column="bTG-6H-XzX" id="Vba-Jm-mze">
@@ -126,9 +129,17 @@
                                 </connections>
                             </button>
                         </gridCell>
+                        <gridCell row="k9r-E5-2wk" column="Be1-SN-h5C" id="8SQ-nr-Qkz">
+                            <customView key="contentView" translatesAutoresizingMaskIntoConstraints="NO" id="ceN-6a-tub">
+                                <rect key="frame" x="603" y="16" width="100" height="30"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="100" id="zrH-pH-UsL"/>
+                                </constraints>
+                            </customView>
+                        </gridCell>
                         <gridCell row="k9r-E5-2wk" column="FSc-K7-Yxq" id="tYI-dp-o10">
                             <customView key="contentView" translatesAutoresizingMaskIntoConstraints="NO" id="F0z-Fg-PCb">
-                                <rect key="frame" x="597" y="16" width="130" height="34"/>
+                                <rect key="frame" x="715" y="16" width="130" height="34"/>
                                 <subviews>
                                     <button fixedFrame="YES" tag="2" translatesAutoresizingMaskIntoConstraints="NO" id="uMN-Tq-7AG">
                                         <rect key="frame" x="34" y="0.0" width="31" height="40"/>
@@ -197,14 +208,15 @@
                         <gridCell row="Jjf-LP-hNf" column="OTS-Jl-7hi" id="U12-4a-Akb"/>
                         <gridCell row="Jjf-LP-hNf" column="xOe-xH-81b" id="6bn-gt-gjX"/>
                         <gridCell row="Jjf-LP-hNf" column="DZP-Oh-WPY" id="1Bz-oB-rHb"/>
+                        <gridCell row="Jjf-LP-hNf" column="Be1-SN-h5C" id="fWp-Fl-Ocm"/>
                         <gridCell row="Jjf-LP-hNf" column="FSc-K7-Yxq" id="Zan-3V-rth"/>
                     </gridCells>
                 </gridView>
             </subviews>
             <constraints>
-                <constraint firstAttribute="trailing" secondItem="dZz-3v-kmg" secondAttribute="trailing" id="Q9E-lq-nih"/>
+                <constraint firstItem="dZz-3v-kmg" firstAttribute="trailing" secondItem="c22-O7-iKe" secondAttribute="trailing" id="Q9E-lq-nih"/>
                 <constraint firstItem="dZz-3v-kmg" firstAttribute="top" secondItem="c22-O7-iKe" secondAttribute="top" id="XDy-fq-QJe"/>
-                <constraint firstAttribute="bottom" secondItem="dZz-3v-kmg" secondAttribute="bottom" id="cs7-8q-tGd"/>
+                <constraint firstItem="dZz-3v-kmg" firstAttribute="bottom" secondItem="c22-O7-iKe" secondAttribute="bottom" id="cs7-8q-tGd"/>
                 <constraint firstItem="dZz-3v-kmg" firstAttribute="leading" secondItem="c22-O7-iKe" secondAttribute="leading" id="fwr-cg-zdf"/>
             </constraints>
             <point key="canvasLocation" x="150.5" y="153.5"/>
