--- a/ModernLookOSXSampleSwift/Controllers/Base.lproj/AccountsView.xib
+++ b/ModernLookOSXSampleSwift/Controllers/Base.lproj/AccountsView.xib
@@ -26,6 +26,9 @@
                         <color key="textColor" name="controlTextColor" catalog="System" colorSpace="catalog"/>
                         <color key="backgroundColor" name="textBackgroundColor" catalog="System" colorSpace="catalog"/>
                     </textFieldCell>
+                    <userDefinedRuntimeAttributes>
+                        <userDefinedRuntimeAttribute type="boolean" keyPath="isTop" value="NO"/>
+                    </userDefinedRuntimeAttributes>
                     <connections>
                         <outlet property="nextKeyView" destination="BEM-yx-l4U" id="ldB-KS-cxZ"/>
                     </connections>
@@ -40,6 +43,9 @@
                         <color key="textColor" name="controlTextColor" catalog="System" colorSpace="catalog"/>
                         <color key="backgroundColor" name="textBackgroundColor" catalog="System" colorSpace="catalog"/>
                     </textFieldCell>
+                    <userDefinedRuntimeAttributes>
+                        <userDefinedRuntimeAttribute type="boolean" keyPath="isTop" value="NO"/>
+                    </userDefinedRuntimeAttributes>
                     <connections>
                         <outlet property="nextKeyView" destination="jTa-2O-8M7" id="V2P-ib-7Gx"/>
                     </connections>
