--- a/ModernLookOSXSampleSwift/Controllers/ToolBar.xib
+++ b/ModernLookOSXSampleSwift/Controllers/ToolBar.xib
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.Cocoa.XIB" version="3.0" toolsVersion="14490.70" targetRuntime="MacOSX.Cocoa" propertyAccessControl="none" useAutolayout="YES" customObjectInstantitationMethod="direct">
+<document type="com.apple.InterfaceBuilder3.Cocoa.XIB" version="3.0" toolsVersion="15705" targetRuntime="MacOSX.Cocoa" propertyAccessControl="none" useAutolayout="YES" customObjectInstantitationMethod="direct">
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.CocoaPlugin" version="14490.70"/>
+        <deployment identifier="macosx"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.CocoaPlugin" version="15705"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
@@ -14,14 +15,14 @@
         <customObject id="-1" userLabel="First Responder" customClass="FirstResponder"/>
         <customObject id="-3" userLabel="Application" customClass="NSObject"/>
         <customView id="c22-O7-iKe" customClass="MLToolbar" customModule="ModernLookOSXSampleSwift" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="845" height="72"/>
+            <rect key="frame" x="0.0" y="0.0" width="851" height="72"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
             <subviews>
                 <gridView xPlacement="leading" yPlacement="bottom" rowAlignment="none" translatesAutoresizingMaskIntoConstraints="NO" id="dZz-3v-kmg">
-                    <rect key="frame" x="0.0" y="0.0" width="845" height="72"/>
+                    <rect key="frame" x="0.0" y="0.0" width="851" height="72"/>
                     <constraints>
-                        <constraint firstItem="ceN-6a-tub" firstAttribute="top" secondItem="jCk-N5-vW5" secondAttribute="top" id="JtT-fX-TC0"/>
-                        <constraint firstItem="ceN-6a-tub" firstAttribute="leading" secondItem="UIM-RW-r5x" secondAttribute="trailing" constant="12" id="PPU-XL-IUL"/>
+                        <constraint firstItem="ceN-6a-tub" firstAttribute="leading" secondItem="UIM-RW-r5x" secondAttribute="trailing" constant="18" id="Pxo-EK-ImZ"/>
+                        <constraint firstItem="ceN-6a-tub" firstAttribute="top" secondItem="jCk-N5-vW5" secondAttribute="top" id="vfd-UN-g3M"/>
                     </constraints>
                     <rows>
                         <gridRow height="10" id="8E7-li-jLr"/>
@@ -67,7 +68,7 @@
                                 </constraints>
                                 <textFieldCell key="cell" controlSize="small" scrollable="YES" lineBreakMode="clipping" sendsActionOnEndEditing="YES" alignment="justified" title="Budget Skeleton" id="tg9-dI-mvh">
                                     <font key="font" size="24" name="HelveticaNeue-Thin"/>
-                                    <color key="textColor" name="labelColor" catalog="System" colorSpace="catalog"/>
+                                    <color key="textColor" name="linkColor" catalog="System" colorSpace="catalog"/>
                                     <color key="backgroundColor" name="controlColor" catalog="System" colorSpace="catalog"/>
                                 </textFieldCell>
                                 <connections>
@@ -131,7 +132,7 @@
                         </gridCell>
                         <gridCell row="k9r-E5-2wk" column="Be1-SN-h5C" id="8SQ-nr-Qkz">
                             <customView key="contentView" translatesAutoresizingMaskIntoConstraints="NO" id="ceN-6a-tub">
-                                <rect key="frame" x="603" y="16" width="100" height="30"/>
+                                <rect key="frame" x="609" y="16" width="100" height="30"/>
                                 <constraints>
                                     <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="100" id="zrH-pH-UsL"/>
                                 </constraints>
